# bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.ru.md  db.env.example  docker-compose-dev.yml  docker-compose.yml  drun  nginx.conf  pyproject.toml  run  test.py
envs/: bot-api.env.example  bot.env.example  nginx.env.example  postgres.env.example  redis.env.example
src/python/: anecdote.py  anecdote_poller.py  config.py  database.py  internet_graph.py  join_refuser.py  logger.py  main.py  strings.py  utils.py
src/python/handlers/: admin_commands.py  echo_commands.py  hype_collector.py  images_echo_commands.py  internet_command.py  join_service.py  kek_command.py  services_commands.py  static_help.py  water_random.py
src/python/handlers/services_handlers/: add_service_commands.py  join_service.py  list_services_command.py  moderate_service.py  my_services_command.py
src/python/storage/: cache.py  command_loader.py  config.py  database.py  services_repository.py  strings.py  times.py  users_repository.py
src/python/storage/repository/: anecdotes_repository.py  hype_repository.py  services_repository.py  users_repository.py
src/res/: ru.yaml  times.yaml
src/res/images/cards/: cards.ai
src/res/images/cards/x5/: x5.ai
src/res/locale/: anecdote_prompt.yaml  ru.json  ru.yaml
src/res/strings/: anecdote_prompt.yaml  commands_info.yaml  times.yaml
src/res/strings/locale/: default.yaml  lang.yaml  ru_br.yaml  untranslatable.yaml
src/res/strings/locale/lang/: en.yaml  ru.yaml
