[tool.poetry]
name = "csohelper"
version = "1.0.0"
description = ""
authors = ["Slava Petrov <slavapmk@gmail.com>"]
packages = [{ include = "python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.20.0"
pydantic = "^2.11.7"
dynaconf = "^3.2.11"
tomli = "^2.2.1"
tomli_w = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csohelper = "python.main:entrypoint"