[tool.poetry]
name = "csohelper"
version = "1.0.0"
description = ""
authors = ["Slava Petrov <slavapmk@gmail.com>"]
packages = [{ include = "python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.20.0"
pydantic = "^2.11.7"
dynaconf = "^3.2.11"
psycopg = {extras = ["async", "binary", "pool"], version = "^3.2.10"}
pyyaml = "^6.0.2"
pymorphy2 = "^0.9.1"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"
setuptools = "^80.9.0"
redis = "^5.0.8"
poetry-core = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csohelper = "python.main:entrypoint"

[virtualenvs]
in-project = true